--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
         <header>
             <h1>🔍 Is This Marcus?</h1>
-            <p>Find if Marcus is on your image using ✨ state-of-the-art ✨ AI</p>
+            <p>Find if Marcus is on your picture using ✨ <strong>state-of-the-art</strong> ✨ AI</p>
         </header>
 
         <main>
