feat: better loading

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </header>
 
         <main>
-            <div class="status" id="status">
+            <div class="status loading" id="status">
                 <div class="status-loading">
-                    <div class="spinner small"></div>
-                    <span>Loading AI model...</span>
+                    <div class="spinner-small"></div>
+                    <span>Loading the model into your browser...</span>
                 </div>
             </div>
 
