feat: better loading

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="status loading" id="status">
                 <div class="status-loading">
                     <div class="spinner-small"></div>
-                    <span>Loading the model into your browser...</span>
+                    <span>Starting model initialization... (0%)</span>
                 </div>
             </div>
 
