--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <line x1="12" y1="15" x2="12" y2="3"></line>
                         </svg>
                         <p>Drop your image here or click to browse</p>
-                        <p class="file-types">Supports any photo with faces • PNG, JPG, JPEG up to 10MB</p>
+                        <p class="file-types">Supports any photo • PNG, JPG, JPEG up to 10MB</p>
                     </div>
                     <input type="file" id="imageInput" accept="image/*" hidden>
                 </div>
